--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
+    "swiper": "^9.4.1",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
